--- a/tours.html
+++ b/tours.html
@@ -15,7 +15,7 @@
       <div id="mainHeader">
         <a href="index.html" title="home" class="logo">
           <div id="logo">
-            <h1>Explore California</h1>
+            <h1>Explore California w/Mark</h1>
           </div>
         </a>
         <div id="siteNav">
@@ -32,7 +32,7 @@
             <li><a href="mission.html" title="What we believe">Mission <br /><span class="tagline">what makes us different?</span></a></li>
             <li><a href="resources.html" title="planning resources">Resources <br /><span class="tagline">plan your trip</span></a>
               <ul>
-                <li><a href="resources/faq.html" title="Got questions?">Tour FAQs</a></li>
+                <li><a href="resources/faq.html" title="Got questions for Mark?">Tour FAQs</a></li>
                 <li><a href="resources/additional_resources.html" title="additional resources">Tour Information</a></li>
                 <li><a href="resources/terms.html" title="terms and conditions">Site Terms</a></li>
               </ul>
@@ -86,7 +86,7 @@
               <p><img src="assets/images/calm_desc_bug.gif" width="195" height="120" alt="California Calm" />Looking for a little relaxation? California Calm is our hand-picked collection of incredible California Spas and therapy retreats. Enjoy unbelievable massage treatments, beauty regimens, and active getaways. We've combed the entire state to find the finest spa experiences available...imagine that, we've even made choosing a spa retreat relaxing! <a href="tour_detail_calm.html" title="California Calm" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
-              <h2>California Hotsprings</h2>
+              <h2>California Hotsprings w/Mark</h2>
               <p><img src="assets/images/springs_desc_bug.gif" width="195" height="120" alt="California Hot Springs" />Let's be honest, you have no idea what a hot spring is...do you? Well, we do, and we can't wait for you to experience the relaxing warmth of "nature's hot-tubs!" We offer packages that range from all-inclusive hot spring resorts to camping opportunities next to some of the country's last remaining primitive springs.<a href="tour_detail_hotsprings.html" title="California Hotsprings" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
